# Interactive-Rendering-Tool

./: CMakeLists.txt  introduction.md  readme.md  toolmake  toolrun
inc/: interactive_rendering_tool.h  models.h  object_loader.h  parameters.h  rendering_viewer.h
include/: interactive_rendering_tool.h
resource/: res.qrc
resource/shaders/: fragment.shader  pointlight.fs  purity.fs  tripoints.fs  tripoints.vs  tripoints_light.fs  tripoints_light.vs  vertex.shader
src/: interactive_rendering_tool.cpp  interactive_rendering_tool.ui  main.cpp  models.cpp  object_loader.cpp  rendering_viewer.cpp
